# crunchtime-alerts

./: .env.example  .gitignore  Crunchtime Alerts.ipynb  README.md  main.py  mlb_alerts.py  mlb_watchability.py  nba_alerts.py  nba_elo.py  nba_teams.csv  nba_watchability.py  pyproject.toml  requirements.txt  test.html
docs/plans/: 2026-04-12-001-feat-error-handling-logging-plan.md
