[project]
name = "crunchtime-alerts"
version = "0.1.0"
description = "NBA crunchtime alerting scripts."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "nba-api==1.1.11",
    "numpy<2.0",
    "pandas==2.1.1",
    "requests==2.31.0",
    "slack-sdk==3.21.3",
]

[tool.uv]
package = false
